# rscolorq

./: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: rust-cd.yml  rust-ci.yml
src/: color.rs  error.rs  lib.rs  matrix.rs  quant.rs
src/color/: lab.rs  rgb.rs
src/quant/: utility.rs
